Fix content area add btn visibility in searchmodal

--- a/sources/stylesheets/_variables.scss
+++ b/sources/stylesheets/_variables.scss
@@ -31,7 +31,7 @@ $box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.05), 0px 25px 35px rgba(0, 0, 0, 0.03);
 
 $z-index-header: 10700;
 $z-index-dropdown: 11015;
-$zindex-cart-popover: 11020;
+$z-index-cart-popover: 11020;
 
 $max-page-width: 1440px;
 
