--- a/sources/stylesheets/components/_header.scss
+++ b/sources/stylesheets/components/_header.scss
@@ -47,7 +47,7 @@
     gap: 32px;
     align-items: center;
     text-wrap: nowrap;
-    z-index: 1;
+    z-index: $z-index-header;
 
     .cart-btn {
       cursor: not-allowed;
